Mejoras en todo el proceso